--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "react-diode",
-  "version": "0.1.0",
+  "version": "0.2.0-beta.1",
   "description": "Endpoint agnostic, unidirectional data fetching for React applications",
-  "main": "lib/index.js",
+  "main": "lib/DiodePublic.js",
+  "files": [
+    "lib",
+    "LICENSE",
+    "package.json",
+    "README.md"
+  ],
   "scripts": {
+    "typecheck": "flow",
     "lint": "marlint",
-    "test": "npm run lint",
-    "build": "rm -rf lib && ./node_modules/.bin/babel src --out-dir lib",
+    "unit": "mocha --compilers js:babel-core/register",
+    "test": "npm run unit test/**/**/*.js",
+    "coverage": "nyc npm test && nyc report --reporter=html",
+    "upload-coverage": "nyc npm test && nyc report --reporter=lcov && codecov",
+    "build": "rm -rf lib && babel src --out-dir lib",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -29,17 +39,40 @@
   },
   "homepage": "https://github.com/traveloka/react-diode#readme",
   "dependencies": {
-    "deep-extend": "^0.4.0",
+    "deep-extend": "^0.4.1",
+    "isomorphic-fetch": "^2.2.1",
     "object-assign": "^4.0.1",
     "superagent": "^1.4.0"
   },
+  "peerDependencies": {
+    "react": "^0.14.7"
+  },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "marlint": "^1.5.3"
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "chai": "^3.5.0",
+    "flow-bin": "^0.22.1",
+    "marlint": "^1.5.3",
+    "mocha": "^2.4.5",
+    "nock": "^7.4.0",
+    "nyc": "^6.1.1",
+    "react": "^0.14.7",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0"
   },
   "marlint": {
     "ignores": [
       "lib/**"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-1"
     ]
   }
 }
