--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "README.md"
   ],
   "scripts": {
-    "typecheck": "flow",
+    "typecheck": "flow check",
     "lint": "marlint",
     "unit": "mocha --compilers js:babel-core/register",
     "test": "npm run unit test/**/**/*.js",
