--- a/examples/package.json
+++ b/examples/package.json
@@ -6,6 +6,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
@@ -15,7 +16,8 @@
   },
   "marlint": {
     "rule": {
-      "prefer-template": 0
+      "prefer-template": 0,
+      "no-console": 0
     }
   },
   "babel": {
