--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/traveloka/react-diode#readme",
   "dependencies": {
     "deep-extend": "^0.4.1",
+    "hoist-non-react-statics": "^1.2.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash.find": "^4.3.0",
     "object-assign": "^4.0.1"
