--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
   "dependencies": {
     "deep-extend": "^0.4.1",
     "hoist-non-react-statics": "^1.2.0",
-    "isomorphic-fetch": "^2.2.1",
     "lodash.find": "^4.3.0",
     "object-assign": "^4.0.1"
   },
   "peerDependencies": {
     "react": "^15.3.1"
+  },
+  "optionalDependencies": {
+    "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
@@ -66,6 +68,7 @@
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
     "sinon": "^1.17.3",
+    "isomorphic-fetch": "^2.2.1",
     "sinon-chai": "^2.8.0"
   },
   "marlint": {
