--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: node_js
+
 node_js:
   - 6
   - 8
-after_script: npm run upload-coverage
+  - 10
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
+before_install:
+  - yarn global add codecov
+
+after_success:
+  - cat ./coverage/lcov.info | codecov
