--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-diode",
   "version": "0.4.2",
   "description": "Endpoint agnostic, unidirectional data fetching for React applications",
+  "source": "src/DiodePublic.js",
   "main": "lib/DiodePublic.js",
   "files": [
     "lib",
@@ -10,14 +11,10 @@
     "README.md"
   ],
   "scripts": {
-    "typecheck": "flow check",
-    "lint": "marlint",
-    "unit": "mocha --compilers js:babel-core/register",
-    "test": "npm run unit test/**/**/*.js",
-    "coverage": "nyc npm test && nyc report --reporter=html",
-    "upload-coverage": "nyc npm test && nyc report --reporter=lcov && codecov",
-    "build": "rm -rf lib && babel src --out-dir lib",
-    "prepublish": "npm run build"
+    "lint": "marlint --quiet",
+    "test": "jest --coverage",
+    "build": "microbundle",
+    "format": "prettier --write src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -45,42 +42,45 @@
     "object-assign": "^4.0.1"
   },
   "peerDependencies": {
-    "react": "^15.3.1"
+    "react": "^16.6.0"
   },
   "optionalDependencies": {
     "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "chai": "^3.5.0",
-    "codecov": "^1.0.1",
-    "enzyme": "^2.2.0",
-    "flow-bin": "^0.22.1",
-    "isomorphic-fetch": "^2.2.1",
-    "marlint": "^1.5.3",
-    "mocha": "^2.4.5",
-    "nock": "^7.4.0",
-    "nyc": "^6.1.1",
-    "react": "^15.0.1",
-    "react-addons-test-utils": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0"
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "husky": "^1.2.0",
+    "jest": "^23.6.0",
+    "lint-staged": "^8.1.0",
+    "marlint": "^6.5.4",
+    "microbundle": "^0.8.3",
+    "prettier": "^1.15.3",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-testing-library": "^5.3.2"
   },
   "marlint": {
     "ignores": [
       "lib/**"
-    ]
+    ],
+    "rules": {
+      "no-duplicate-imports": 0,
+      "flowtype/no-types-missing-file-annotation": 0,
+      "no-else-return": 0,
+      "no-param-reassign": 0
+    }
   },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-1"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
     ]
   }
 }
