--- a/package.json
+++ b/package.json
@@ -49,10 +49,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
+    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
+    "jest-dom": "^3.0.0",
     "lint-staged": "^8.1.0",
     "marlint": "^6.5.4",
     "microbundle": "^0.8.3",
@@ -82,5 +87,8 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "jest": {
+    "testRegex": "__tests__/.*.test\\.js$"
   }
 }
