cra + next example

--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "postinstall": "yarn link react-diode @diode/example",
     "start": "next"
   },
   "dependencies": {
