--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "^1.15.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-is": "^16.8.1",
     "react-testing-library": "^5.3.2"
   },
   "marlint": {
