--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "object-assign": "^4.0.1"
   },
   "peerDependencies": {
-    "react": "^16.6.0"
+    "react": "^16.6.0",
+    "react-is": "^16.8.3"
   },
   "optionalDependencies": {
     "isomorphic-fetch": "^2.2.1"
@@ -64,7 +65,7 @@
     "prettier": "^1.15.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-is": "^16.8.1",
+    "react-is": "^16.8.3",
     "react-testing-library": "^5.3.2"
   },
   "marlint": {
