--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-diode",
-  "version": "0.5.13-2",
+  "version": "0.5.13",
   "description": "Endpoint agnostic, unidirectional data fetching for React applications",
   "source": "src/DiodePublic.js",
   "main": "lib/DiodePublic.js",
