--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "marlint --quiet",
     "test": "jest --coverage",
     "prepare": "npm run test && npm run build",
-    "build": "microbundle --jsx React.createElement -o lib",
+    "build": "rollup -c rollup.config.js",
     "format": "prettier --write src/**/*.js"
   },
   "repository": {
@@ -62,12 +62,13 @@
     "jest-dom": "^3.0.0",
     "lint-staged": "^8.1.0",
     "marlint": "^6.5.4",
-    "microbundle": "^0.11.0",
     "prettier": "^1.15.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-is": "^16.8.3",
-    "react-testing-library": "^5.3.2"
+    "react-testing-library": "^5.3.2",
+    "rollup": "^1.12.0",
+    "rollup-plugin-babel": "^4.3.2"
   },
   "marlint": {
     "ignores": [
