--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "react-is": "^16.8.3",
     "react-testing-library": "^5.3.2",
     "rollup": "^1.12.0",
-    "rollup-plugin-babel": "^4.3.2"
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.0"
   },
   "marlint": {
     "ignores": [
