--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-plugin-async-to-promises": "^1.0.5",
     "husky": "^1.2.0",
     "jest": "^24.7.1",
     "jest-dom": "^3.0.0",
@@ -69,9 +70,7 @@
     "react-is": "^16.8.3",
     "react-testing-library": "^5.3.2",
     "rollup": "^1.12.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0"
+    "rollup-plugin-babel": "^4.3.2"
   },
   "marlint": {
     "ignores": [
